# shopware-ai-chat-backend

./: .env.local  .gitignore  Dockerfile  Makefile  README.md  app.py  compose.yaml  main.py  pyproject.toml  shopware_mcp_server.py
backend/app/services/: __init__.py  domain_knowledge_loader.py  domain_knowledge_models.py  domain_knowledge_prompt.py  domain_knowledge_resolver.py
backend/data/: domain_terms.json
scripts/: rebuild_ollama_aliases.sh
