[project]
name = "shopware-ollama-mcp"
version = "0.1.0"
description = "Chat backend that bridges Shopware product data to a local Ollama model via MCP tools."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.2",
  "openai>=1.46.0",        # for Ollama's OpenAI-compatible API
  "mcp>=1.0.0",            # official MCP SDK (client + server)
  # Optional fallback if your environment lacks mcp.server.fastmcp:
  # "fastmcp>=0.2.0",
]

[tool.uv]
# (uv-specific settings optional)
